--- a/index.css
+++ b/index.css
@@ -40,7 +40,10 @@
     color:white;font-weight:700;font-size:13px;
 
   }
-  .site-name{font-weight:700;font-size:18px}
+  .site-name{font-weight:700;
+    font-size:26px;
+    color: #0b6f3a;
+  }
 
   .nav-stats{
     display:flex;
